--- a/FußballManager/FußballManager.csproj
+++ b/FußballManager/FußballManager.csproj
@@ -32,7 +32,7 @@
 
   <ItemGroup>
     <None Update="Spielerdaten.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
